[gd_scene load_steps=6 format=2]

[ext_resource path="res://Control/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Health Bar/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/NPCs/Blueprint/EnemyCharacter.gd" type="Script" id=3]
[ext_resource path="res://Characters/Mobs/Blueprint/Hit.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/highlight_color = null
shader_param/highlight = false

[node name="EnemyCharacter" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 19
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="HitEffect" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="HealthBar" to="." method="dead"]
[connection signal="timeout" from="HitEffect" to="." method="_on_HitEffect_timeout"]
